configs/istio/egress-mongo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mongodb-atlas
  namespace: default
spec:
  hosts:
  - "auth-db.8gdb0.mongodb.net"
  addresses:
  - "0.0.0.0/0"
  ports:
  - number: 27017
    name: mongodb
    protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
  endpoints:
  - address: auth-db-shard-00-00.8gdb0.mongodb.net
  - address: auth-db-shard-00-01.8gdb0.mongodb.net
  - address: auth-db-shard-00-02.8gdb0.mongodb.net
