configs/istio/openauth-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: openauth-vs
spec:
  hosts:
    - "*"
  gateways:
    - openauth-gateway
  http:
    - match:
        - uri:
            prefix: /otp
      route:
        - destination:
            host: openauth-otp
            port:
              number: 80
